# pimp-my-repo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TY_BOOST_STATUS.md  justfile  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: python-dev-enforcer.md
.claude/plans/: implement-pre-commit.md
.claude/skills/flatten/: SKILL.md
.claude/skills/new-boost/: SKILL.md
.cursor/agents/: smoke-tester.md
.cursor/rules/: project-standards.mdc  type-defs.mdc  use-just.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-attach.sh
.github/workflows/: checks.yml  ci.yml  delivery.yml  lint.yml  release.yml  test-e2e.yml  test-unit.yml  test.yml  tests.yml  type-check.yml
etc/: plan.md
pimp_my_repo/: __init__.py  main.py
pimp_my_repo/cli/: __init__.py  main.py  runner.py
pimp_my_repo/core/: __init__.py  booster.py  git.py  registry.py  result.py  run_config.py  state.py
pimp_my_repo/models/: __init__.py  state.py
pimp_my_repo/templates/: justfile.j2  pre-commit.yaml.j2  pyproject.toml.j2  ruff.toml.j2
pimp_my_repo/ui/: __init__.py  rich_ui.py
scripts/: run_checks.py  test_e2e.py
tests/: conftest.py  e2e_utils.py  repo_controller.py  test_cli.py  test_e2e.py  test_e2e_local.py  test_e2e_remote.py  test_github_actions_boost.py  test_gitignore_boost.py  test_imports.py  test_justfile_boost.py  test_mypy_boost.py  test_pre_commit_boost.py  test_pyproject.py  test_python_version.py  test_ruff_boost.py  test_ty_boost.py  test_uv_boost.py
tests/utils/: repo_controller.py
(+40 files in other folders)
