# Project

[project]

name = "pimp-my-repo"
version = "0.1.0"
description = "🪄 Enhance your Python repository by adding cutting-edge development tools"
authors = [
    { name = "Asaf Kali", email = "asaf.kali@mail.huji.ac.il" },
]
requires-python = ">=3.14"
readme = "README.md"

# Dependencies

dependencies = [
    "pydantic ~= 2.12",
]

[dependency-groups]
test = [
    "pytest ~= 9.0",
    "coverage[toml] >= 7.12",
]
lint = [
    "ruff >= 0.14",
    "mypy >= 1.19",
]
dev = [
    "pre-commit >= 2.17",
]

# Extra Metadata

[project.urls]
Homepage = "https://github.com/asaf-kali/pimp-my-repo"
Repository = "https://github.com/asaf-kali/pimp-my-repo"
Issues = "https://github.com/asaf-kali/pimp-my-repo/issues"

# UV

[tool.uv]
package = true

[project.scripts]
pimp-my-repo = "pimp_my_repo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Test

[tool.pytest.ini_options]
pythonpath = "app"
addopts = "-s --disable-pytest-warnings"

[tool.coverage.run]
omit = ["tests/*"]
source = ["."]

# Lint

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D103",
    "D104",
    "D203",
    "D213",
]
exclude = [
    "local/",
]

[tool.mypy]
exclude = [
    "local/",
]
